# marky-mark

./: CONTRIBUTING.md  GOAL10.md  README.md  RELEASING.md  THEMES.md  THIRD-PARTY-NOTICES.md  package-lock.json  package.json  vite.config.ts  vite.web.config.ts
.cargo/: audit.toml
.claude/commands/: check.md  dogfood.md  gate.md  release-mac.md  release-windows.md
.github/workflows/: release-windows.yml  release.yml  updater-manifest.yml
docs/: ARCHITECTURE.md  DEVELOPING.md  RELEASING.md  WINDOWS.md  license.md
docs/goals/: GOAL11.md  GOAL12.md  GOAL13.md  GOAL14.md  GOAL15.md  GOAL16.md  GOAL17.md  GOAL18.md  GOAL19.md  GOAL20.md  GOAL23.md  GOAL30.md  GOAL31.md  GOAL33.md  GOAL34.md  GOAL35.md  GOAL36.md  GOAL37.md  GOAL38.md  GOAL39.md  GOAL40.md  GOAL41.md  GOAL42.md  GOAL43.md  GOAL44.md
docs/security/: assessment.md
docs/specs/: SPEC10.md  SPEC11.md  SPEC12.md  SPEC13.md  SPEC14.md  SPEC15.md  SPEC16.md  SPEC17.md  SPEC18.md  SPEC19.md  SPEC20.md  SPEC21.md  SPEC22.md  SPEC23.md  SPEC24.md  SPEC25.md  SPEC26.md  SPEC27.md  SPEC29.md  SPEC30.md  SPEC31.md  SPEC32.md  SPEC33.md  SPEC34.md  SPEC35.md  SPEC36.md  SPEC37.md  SPEC38.md  SPEC39.md  SPEC40.md  SPEC41.md  SPEC42.md  SPEC43.md  SPEC44.md  SPEC45.md
fixtures/: adversarial.md
scripts/: deep-clean.sh  licenses.d.mts  licenses.mjs  release-prepare.mjs  updater-manifest.mjs  validate.mjs
src/: App.tsx  AuxWindow.tsx  PrintView.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: aux.json  auxiliary.json  default.json
src-tauri/src/: lib.rs  main.rs
(+92 files in other folders)
