[package]
name = "markimark"
version = "0.3.0-alpha.1"
description = "A lightweight, fast, themeable markdown viewer"
license = "MIT"
edition = "2021"

[lib]
name = "markimark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[profile.release]
codegen-units = 1
lto = true
strip = true
